--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "express": "^4.16.4",
     "mongodb": "^3.1.12",
     "nodemon": "^1.18.9",
-    "socket.io": "^2.2.0"
+    "socket.io": "^2.2.0",
+    "uniqid": "^5.0.3"
   }
 }
