--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "Rebecca Zhang, Peter Zhou",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.18.3",
     "express": "^4.16.4",
     "mongodb": "^3.1.12",
     "nodemon": "^1.18.9",
